# AIStockMonitor

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
data/: goods.json  products.json
src/: main.py  monitor.py  scheduler.py  spider.py  telegram_bot.py
