[project]
name = "aistockmonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "playwright>=1.52.0",
    "pytoml>=0.1.21",
    "requests>=2.32.4",
    "toml>=0.10.2",
    "python-telegram-bot>=22.1",
]

[project.scripts]
run = "python main.py"
start = "-m main"
